Added Shark Botanists and Merchants Removed Shark Shipwrights Change: Lizard Priests

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -356,6 +356,7 @@
     "effectsMgr.statics.barnRatio.title": "Barn expansion",
     "effectsMgr.statics.baseMetalMaxRatio.title": "Maximum base metal bonus",
     "effectsMgr.statics.beaconRelicsPerDay.title": "Relic production",
+    "effectsMgr.statics.biolabEnergyRatio.title": "Bio Lab energy reduction",
     "effectsMgr.statics.biofuelRatio.title": "Bio Fuel bonus",
     "effectsMgr.statics.blackLibraryBonus.title": "Black Library bonus",
     "effectsMgr.statics.blsCorruptionRatio.title": "BLS corruption bonus",
@@ -363,6 +364,7 @@
     "effectsMgr.statics.blsProductionBonus.title": "BLS production bonus",
     "effectsMgr.statics.boostFromLeader.title": "Boost From Leader",
     "effectsMgr.statics.breweryConsumptionRatio.title": "Brewery consumption ratio",
+    "effectsMgr.statics.breweryPolicyManpowerRatio.title": "Brewery catpower bonus",
     "effectsMgr.statics.broadcastTowerRatio.title": "Broadcast Tower bonus",
     "effectsMgr.statics.bskSattelitePenalty.title": "Satellite base penalty",
     "effectsMgr.statics.cadBlueprintCraftRatio.title": "Blueprint craft bonus",
@@ -507,8 +509,10 @@
     "effectsMgr.statics.reactorEnergyRatio.title": "Reactor energy bonus",
     "effectsMgr.statics.reactorThoriumPerTick.title": "Reactor thorium consumption",
     "effectsMgr.statics.refineRatio.title": "Catnip refine bonus",
+    "effectsMgr.statics.refinePolicyRatio.title": "Catnip refine bonus",
     "effectsMgr.statics.relicPerDay.title": "Relic production",
     "effectsMgr.statics.relicRefineRatio.title": "Relic refine bonus",
+    "effectsMgr.statics.religionUpgradesDiscount.title" : "Religion upgrade discount",
     "effectsMgr.statics.resStasisRatio.title": "Res-Stasis ratio",
     "effectsMgr.statics.researchVessel-starchartPerTickBaseSpace.title": "Research Vessel - Starchart production",
     "effectsMgr.statics.riftChance.title": "Unicorns rift chance",
@@ -820,10 +824,12 @@
     "policy.rationing.desc": "Stoic philosophers encourage restraint and saving, making hunting more effective and reducing the effect of happiness on catnip consumption.",
     "policy.republic.label" : "Republic",
     "policy.republic.desc" : "Best for large societies. Highly promoted leaders will provide a small bonus to the production of all kittens.",
+    "policy.sharkRelationsBotanists.label" : "Shark Relations: Botanists",
+    "policy.sharkRelationsBotanists.desc" : "Work together with shark botanists to improve catnip refinement and conversion processes.",
     "policy.sharkRelationsScribes.label" : "Shark Relations: Scribes",
     "policy.sharkRelationsScribes.desc" : "Work together with shark scribes to record Cath's history.",
-    "policy.sharkRelationsShipwrights.label" : "Shark Relations: Shipwrights",
-    "policy.sharkRelationsShipwrights.desc" : "Work together with shark shipwrights to improve vessels.",
+    "policy.sharkRelationsMerchants.label" : "Shark Relations: Merchants",
+    "policy.sharkRelationsMerchants.desc" : "Work together with shark merchants to discover and use the best trade routes through land and water. The more you trade, the more effective it becomes.",
     "policy.siphoning.label" : "Siphoning",
     "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
